# LearnOpenGL

./: CMakeLists.txt  FindAssimp.cmake  FindGLAD.cmake  FindGLFW3.cmake  FindGLM.cmake  FindZLIB.cmake
include/: camera.h  model.h  shader.h
include/glad/: glad.h
shader/: default.frag  default.vs
src/: camera.cpp  glad.c  main.cpp  model.cpp  shader.cpp
